--- a/src/css/React/InfographicEditor.css
+++ b/src/css/React/InfographicEditor.css
@@ -31,6 +31,7 @@
     top: -0px;
     left: 2px;
     padding: 20px;
+    z-index: 1;
 }
 
 .editor-vertical-divider {
